Added paths to the compilerOptions on the tsconfig.json. Will be able to use absolute routing rather than relative routing

--- a/dog-app/tsconfig.json
+++ b/dog-app/tsconfig.json
@@ -17,7 +17,13 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@core/*": ["app/core/*"],
+      "@shared/*": ["app/shared/*"],
+      "@modules/*": ["app/modules/*"],
+      "@app/*": ["app/*"],
+    },
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
