Added core, modules, public, shared folders. Worked on basic route path. Layout of application in layout folder

--- a/dog-app/tsconfig.json
+++ b/dog-app/tsconfig.json
@@ -19,10 +19,10 @@
       "dom"
     ],
     "paths": {
-      "@core/*": ["app/core/*"],
-      "@shared/*": ["app/shared/*"],
-      "@modules/*": ["app/modules/*"],
-      "@app/*": ["app/*"],
+      "@core/*": ["src/app/core/*"],
+      "@shared/*": ["src/app/shared/*"],
+      "@modules/*": ["src/app/modules/*"],
+      "@app/*": ["src/app/*"],
     },
   },
   "angularCompilerOptions": {
